--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
+    "jquery": "^3.3.1",
     "loadjs": "^3.5.4",
     "react": "^16.3.1",
     "react-bootstrap": "^0.32.1",
