--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.3.2",
     "react-places-autocomplete": "^7.1.1",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-star-ratings": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
