--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,11 @@
     "bootstrap": "^4.1.1",
     "jquery": "^3.3.1",
     "loadjs": "^3.5.4",
+    "particlesjs": "^2.2.2",
     "react": "^16.3.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
+    "react-particles-js": "^2.1.3",
     "react-places-autocomplete": "^7.1.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
