--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "npm": "^6.4.1",
     "particlesjs": "^2.2.2",
     "react": "^16.3.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.3.2",
     "react-particles-js": "^2.1.3",
     "react-places-autocomplete": "^7.1.1",
@@ -22,5 +23,11 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:4000/"
+  "proxy": "http://localhost:4000/",
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
